@@ -419,6 +419,47 @@ nxwm
 
     trunk/NxWidgets/UnitTests/READEM.txt
 
+  NOTE:  There is an issue with running this example under the
+  simulation.  In the default configuration, this example will
+  run the NxConsole example which waits on readline() for console
+  intput.  When it calls readline(), the whole system blocks
+  waiting from input from the host OS.  So, in order to get
+  this example to run, you must comment out the readline call in
+  apps/nshlib/nsh_consolemain.c like:
+
+  Index: nsh_consolemain.c
+  ===================================================================
+  --- nsh_consolemain.c   (revision 4681)
+  +++ nsh_consolemain.c   (working copy)
+  @@ -117,7 +117,8 @@
+     /* Execute the startup script */
+ 
+   #ifdef CONFIG_NSH_ROMFSETC
+  -  (void)nsh_script(&pstate->cn_vtbl, "init", NSH_INITPATH);
+  +// REMOVE ME
+  +//  (void)nsh_script(&pstate->cn_vtbl, "init", NSH_INITPATH);
+   #endif
+   
+     /* Then enter the command line parsing loop */
+  @@ -130,7 +131,8 @@
+         fflush(pstate->cn_outstream);
+   
+         /* Get the next line of input */
+  -
+  +sleep(2); // REMOVE ME
+  +#if 0 // REMOVE ME
+         ret = readline(pstate->cn_line, CONFIG_NSH_LINELEN,
+                        INSTREAM(pstate), OUTSTREAM(pstate));
+         if (ret > 0)
+  @@ -153,6 +155,7 @@
+                     "readline", NSH_ERRNO_OF(-ret));
+             nsh_exit(&pstate->cn_vtbl, 1);
+           }
+  +#endif // REMOVE ME
+       }
+ 
+     /* Clean up */
+
 ostest
 
   Description
